force-app/main/default/objects/NPNPD__c/NPNPD__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>NPN Program Deal (EDU Lead Registration) : Channel Admin mappings based on Country Code
SDS-3055-Approves moved to Custom Object. Only Other__c field is used from this CS</description>
    <label>NPNPD</label>
</CustomObject>