force-app/main/default/objects/NPNPD__c/fields/APAC__c.field-meta.xml
<CustomField>
    <fullName>APAC__c</fullName>
    <label>APAC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>