force-app/main/default/objects/NPNPD__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <label>CA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>