force-app/main/default/objects/NPNPD__c/fields/CN__c.field-meta.xml
<CustomField>
    <fullName>CN__c</fullName>
    <description>CN - David Ma</description>
    <label>CN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>