force-app/main/default/objects/NPNPD__c/fields/EMEA__c.field-meta.xml
<CustomField>
    <fullName>EMEA__c</fullName>
    <label>EMEA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>