force-app/main/default/objects/NPNPD__c/fields/IL__c.field-meta.xml
<CustomField>
    <fullName>IL__c</fullName>
    <label>IL</label>
    <length>18</length>
    <type>Text</type>
</CustomField>