force-app/main/default/objects/NPNPD__c/fields/JP__c.field-meta.xml
<CustomField>
    <fullName>JP__c</fullName>
    <label>JP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>