force-app/main/default/objects/NPNPD__c/fields/LATAM__c.field-meta.xml
<CustomField>
    <fullName>LATAM__c</fullName>
    <label>LATAM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>