force-app/main/default/objects/NPNPD__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Catch all 
Alvin DaCosta - 00540000003ogMV</description>
    <label>Other</label>
    <length>18</length>
    <type>Text</type>
</CustomField>