force-app/main/default/objects/NPNPD__c/fields/RU__c.field-meta.xml
<CustomField>
    <fullName>RU__c</fullName>
    <label>RU</label>
    <length>18</length>
    <type>Text</type>
</CustomField>